--- a/css_project/assets/css/style.css
+++ b/css_project/assets/css/style.css
@@ -57,7 +57,6 @@ div#topnewsDiv{
 
 div.topnews_left{
 	float: left;
-	/*margin-right: 10px;*/
 }
 div.topnews_left img{
 	width: 700px;
@@ -104,6 +103,236 @@ div.topnews_2{
 	height:250px;
 
 }
+
+div#blogDiv{
+	display: flex;
+    padding: 50px 120px 50px 150px;
+}
+div.post img{
+	width: 300px;
+	height: 200px;
+	float: left;
+	margin-right: 30px;
+}
+div.post div.post_content span
+{
+	font-size: 14px;
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: 0.18px;
+	line-height: 2;
+	color: #a1a1a1;
+}
+
+div.post div.post_content h3{
+	font-size: 24px;
+	letter-spacing: 0.5px;
+	font-weight: bold;
+	margin: 5px 0 16px;
+	padding-bottom: 8px;
+}
+div.post div.post_content h3 a{
+	text-decoration: none;
+	font-family: Oswald-Bold;
+	color: #151515;
+}
+div.post div.post_content hr,
+div.popularpostDiv hr,
+div.categoriesDiv hr,
+div.instagramDiv hr,
+div.followDiv hr,
+div.newsletterDiv hr{
+	height: 3px;
+	background-color: #e1e1e1;
+	width: 30px;
+	border: none;
+	margin: 0;
+}
+
+div.post div.post_content p{
+	color: #717171;
+	letter-spacing: 0.150px;
+    line-height: 1.6;
+}
+
+div.post a{
+	text-decoration: none;
+	color: #a1a1a1;
+	text-transform: uppercase;
+	font-size: 14px;
+}
+
+div.blogDiv_left div.post div.post_content{
+	border-bottom: 1px solid #ebebeb;
+    width: 500px;
+    float: left;
+    padding-bottom: 20px;
+}
+
+div.post{
+	margin: 20px 0;
+}
+
+div.blogDiv_right{
+	width: 250px;
+	margin-right: 10px;
+}
+
+div.popularpostDiv div.post img{
+	width: 100px;
+	height: 80px;
+}
+
+div.popularpostDiv div.post p{
+	color: #a1a1a1;
+    font-size: 12px;
+    letter-spacing: 0.18px;
+    text-transform: uppercase;
+}
+
+div.categoriesDiv{
+	margin-top: 45px;
+}
+
+div.categoriesDiv div.categoryLists{
+	display: grid;
+	grid-row-gap: 10px;
+	margin-top: 20px;
+}
+
+div.categoriesDiv div.categoryLists a{
+	text-decoration: none;
+	text-transform: uppercase;
+	background-color: #F7F7F7;
+	color: #464646;
+	text-align: center;
+	padding: 8px;
+	font-size: 12px;
+	transition: all 1s ease 0s;
+}
+
+div.categoriesDiv div.categoryLists a:hover{
+	background-color: #464646;
+	color: #F7F7F7;
+}
+
+div.blogDiv_left{
+	margin-right: 30px;
+}
+
+div.instagramDiv img{
+	width: 80px;
+	height: 80px;
+	object-fit: cover;
+}
+
+div.instagramDiv div.instagramList{
+	display: grid;
+	grid-template-columns: auto auto auto;
+	grid-gap: 5px;
+	margin-top: 20px ;
+}
+
+div.followDiv div.followiconList{
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
+	padding: 15px 20px;
+	background-color: #f7f7f7;
+}
+
+div.followDiv div.followiconList div{
+	width: 28px;
+}
+
+div.newsletterDiv div.newsletterbox{
+	background-color: #f7f7f7;
+	padding: 35px;
+	text-align: center;
+	margin-top: 20px;
+}
+
+div.newsletterDiv div.newsletterbox i{
+	width: 50px;
+	height: 50px;
+	background-color: #fff;
+	border-radius: 50%;
+	line-height: 3;
+}
+
+div.newsletterDiv div.newsletterbox h4{
+	font-size: 16px;
+	font-weight: bold;
+	letter-spacing: -0.45px;
+	line-height: 1.6;
+}
+
+div.newsletterDiv div.newsletterbox p{
+	font-size: 12px;
+	color: #717171;
+    letter-spacing: 0.225px;
+}
+
+div.newsletterDiv div.newsletterbox input[type="email"]{
+	background-color: #fff;
+	border: none;
+	border-radius: 0;
+	box-shadow: none;
+	color: #717171;
+	outline: none;
+	padding: 10px 0;
+	text-align: center;
+	width: 100%;
+}
+
+div.newsletterDiv div.newsletterbox input[type="button"]{
+	background-color: #464646;
+	border: none;
+	border-radius: 0;
+	cursor: pointer;
+	color:#fff;
+	width: 100%;
+	padding: 9px 10px;
+	margin-top: 7px;
+	text-transform: uppercase;
+	transition: all 1s ease 0s;
+}
+div.newsletterDiv div.newsletterbox input[type="button"]:hover{
+	background-color: transparent;
+	color: #464646;
+	box-shadow: inset 0px 0px 2px 0px #464646;
+}
+
+footer div.photogridList{
+	display: grid;
+	grid-template-columns: auto auto auto auto auto auto;
+	grid-gap: 0;
+	margin-top: 20px;
+}
+footer div.photogridList div{
+	width: 220px;
+}
+footer div.photogridList div img{
+	width: 240px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
